--- a/src/package.json
+++ b/src/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.0",
-    "body-parser": "~1.15.2",
+    "body-parser": "^1.18.3",
     "connect-mongodb-session": "^1.3.0",
     "cron": "^1.2.1",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
     "express-session": "^1.14.2",
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
